--- a/src/app/contact/ContactPage.module.css
+++ b/src/app/contact/ContactPage.module.css
@@ -11,6 +11,46 @@
   box-sizing: border-box;
 }
 
+.navbar {
+  /*max-width: 1400px;*/
+  width: 100vw;
+  padding: 10px 30px;
+  margin: 0 auto;
+  position: fixed;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  z-index: 1000;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: rgba(0, 0, 0, 0.8);
+  border-radius: 0 0 20px 20px;
+  color: white;
+  box-sizing: border-box;
+  margin-top: 5px;
+}
+
+.logoContainer {
+  display: flex;
+  align-items: center;
+  width: 50px;
+  height: 50px;
+  object-fit: contain;
+  border-radius: 50%;
+  margin-right: auto;
+  margin-left: -20px;
+  gap: -10px;
+}
+
+.logo {
+  margin-left: -45px;
+  font-size: 24px;
+  font-weight: bold;
+  margin-bottom: 3px;
+  font-family: "Roboto Condensed", sans-serif;
+}
+
 /* Titel */
 .contactTitle {
   font-size: 2.5rem;
