--- a/src/app/Homepage.module.css
+++ b/src/app/Homepage.module.css
@@ -404,7 +404,7 @@
 /* Ladestation */
 .chargingStation {
   position: absolute;
-  right: 5%;
+  right: 10%;
   z-index: 3;
   width: 220px;
   height: auto;
@@ -705,7 +705,7 @@
 /* KI-Lösungen Section Styling */
 .kiSolutionsSection {
   /*max-width: 1400px;*/
-  padding: 80px;
+  padding: 50px 20px;
   text-align: center;
   background: linear-gradient(to bottom, #1a2453 0%, #08133c 50%, #08133c 100%);
   color: white;
@@ -719,17 +719,53 @@
   margin: 0 auto;
   padding: 0 20px;
   max-width: 1200px;
+  font-family: "Roboto Condensed", sans-serif;
 }
 
 .kiItem {
+  position: relative;
   overflow: hidden;
   transition: transform 0.3s ease;
   margin-top: 20px;
   padding: 10px;
+  border-radius: 10px;
 }
 
 .kiItem:hover {
-  transform: scale(1.05);
+  transform: scale(1.1); /* Vergrößerung des Bilds */
+  
+}
+
+.kiItem img {
+  width: 80%;
+  height: auto;
+  object-fit: cover;
+  transition: transform 0.3s ease, filter 0.3s ease;
+  z-index: 1;
+}
+
+.kiItem:hover img {
+  filter: brightness(50%); /* Bild abdunkeln */
+}
+
+/* Hover-Text */
+.hoverText {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 1.2rem;
+  color: white;
+  text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.7);
+  opacity: 0; /* Versteckt standardmäßig */
+  transition: opacity 0.3s ease-in-out;
+  pointer-events: none; /* Verhindert Interaktion */
+  text-align: center;
+  z-index: 1000;
+}
+
+.kiItem:hover .hoverText {
+  opacity: 1; /* Sichtbar beim Hover */
 }
 
 .sectionTitle {
@@ -783,7 +819,7 @@
 }
 
 .requirementsGrid::before {
-  content: "";
+  content: '';
   position: absolute;
   width: 90%;
   height: 2px;
@@ -976,7 +1012,7 @@
 /* Ladestation Bild */
 .smartCharger {
   top: 100px;
-  left: 38%;
+  left: 1040px;
   z-index: 2;
   position: relative;
   width: 220px;
@@ -1110,45 +1146,43 @@
   position: fixed; /* Fixiert den Roboter an der Seite */
   right: 20px; /* Positioniert den Roboter 20px vom rechten Rand */
   top: 50%; /* Vertikale Zentrierung auf der Seite */
-  transform: translateY(
-    -50%
-  ); /* Kompensation der Höhe des Roboters für exakte vertikale Zentrierung */
+  transform: translateY(-50%); /* Kompensation der Höhe des Roboters für exakte vertikale Zentrierung */
   z-index: 9999; /* Sicherstellen, dass der Roboter immer im Vordergrund bleibt */
 }
 
 /* Responsive Styles */
 @media (max-width: 768px) {
   .heroText {
-    font-size: 2rem;
+      font-size: 2rem;
   }
 
   .ctaButton {
-    padding: 12px 24px;
-    font-size: 1rem;
+      padding: 12px 24px;
+      font-size: 1rem;
   }
 
   .infoSection p {
-    padding: 10px;
-    font-size: 1rem;
+      padding: 10px;
+      font-size: 1rem;
   }
 
   .requirementsGrid {
-    grid-template-columns: 1fr;
+      grid-template-columns: 1fr;
   }
 
   .cardsContainer {
-    gap: 10px;
+      gap: 10px;
   }
 }
 
 @media (max-width: 480px) {
   .navbar {
-    flex-direction: column;
-    padding: 10px;
+      flex-direction: column;
+      padding: 10px;
   }
 
   .linksContainer {
-    flex-direction: column;
-    gap: 10px;
+      flex-direction: column;
+      gap: 10px;
   }
 }
