--- a/src/app/contact/ContactPage.module.css
+++ b/src/app/contact/ContactPage.module.css
@@ -56,6 +56,7 @@
   font-size: 2.5rem;
   font-weight: bold;
   margin-bottom: 10px;
+  font-family: "Roboto Condensed", sans-serif;
 }
 
 /* Untertitel */
@@ -64,6 +65,7 @@
   margin-bottom: 30px;
   text-align: center;
   max-width: 600px;
+  font-family: "Roboto Condensed", sans-serif;
 }
 
 /* Kontaktformular */
@@ -74,18 +76,43 @@
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.4);
   width: 100%;
   max-width: 500px;
+  font-family: "Roboto Condensed", sans-serif;
+}
+
+.formGroup {
+  margin-bottom: 20px;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
 }
 
 /* Eingabefelder und Labels */
 .formGroup label {
-  display: flex;
-  flex-direction: column;
-  margin-bottom: 20px;
+  font-size: 1rem;
+  margin-bottom: 8px;
+  font-weight: bold;
 }
 
 .formGroup input,
 .formGroup textarea {
-  padding: 10px;
+  width: 100%;
+  padding: 15px;
+  font-size: 1rem;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  border-radius: 12px;
+  background: rgba(55, 53, 53, 0.2);
+  color: white;
+  box-shadow: inset 0 2px 5px rgba(0, 0, 0, 0.2);
+  outline: none;
+  transition: all 0.3s ease;
+  font-family: "Roboto Condensed", sans-serif;
+}
+
+.formGroup input:focus,
+.formGroup textarea:focus {
+  border-color: #366096;
+  box-shadow: 0 4px 10px rgba(26, 115, 232, 0.2);
+  background: rgba(255, 255, 255, 0.134);
 }
 
 .input,
@@ -111,13 +138,18 @@
   border: none;
   padding: 15px 20px;
   font-size: 1.2rem;
-  border-radius: 10px;
+  font-weight: bold;
+  border-radius: 12px;
   cursor: pointer;
-  transition: background 0.3s ease;
+  transition: all 0.3s ease;
+  width: 100%;
+  max-width: 180px;
+  font-family: "Roboto Condensed", sans-serif;
 }
 
 .submitButton:hover {
   background: linear-gradient(to right, #218838, #28a745);
+  transform: scale(1.05);
 }
 
 .backToHome {
