charging station + logo gefixt

--- a/src/app/Homepage.module.css
+++ b/src/app/Homepage.module.css
@@ -1021,7 +1021,7 @@
 /* Ladestation Bild */
 .smartCharger {
   top: 100px;
-  left: 1040px;
+  left: 38.4%;
   z-index: 2;
   position: relative;
   width: 220px;
